src/test/ui/rust-2018/uniform-paths/ambiguity-macros.stderr
error: import from `std` is ambiguous
  --> $DIR/ambiguity-macros.rs:17:5
   |
LL |   use std::io;
   |       ^^^ could refer to external crate `::std`
...
LL | /         mod std {
LL | |             pub struct io;
LL | |         }
   | |_________- could also refer to `self::std`
   |
   = help: write `::std` or `self::std` explicitly instead
   = note: relative `use` paths enabled by `#![feature(uniform_paths)]`

error: aborting due to previous error

